--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
 	<div class="menu">
 		<h1>Joueur : </h1>
 		<h1>XXXXXXXXXX</h1>
+		<ul id="listeDesJoueur">
+			
+
+		</ul>
 	</div>
 	<!--
 	afficher la parti selectionner
