--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
 </head>
 <body>
+
+
+
 	<!--
 	entrer le nom des joueurs
 	-->
@@ -43,6 +46,21 @@
 		<h1>XXXXXXXXXX</h1>
 	</div>
 
+	<div class="menu" id="menu">
+		<h1>lanver la parti</h1>
+		<select>
+			<option value="manuelle">Mode manuelle</option>
+			<option value="5">5 seconde</option>
+			<option value="10">10 seconde</option>
+			<option value="15">15 seconde</option>
+			<option value="20">20 seconde</option>
+			<option value="30">30 seconde</option>
+			<option value="45">45 seconde</option>
+			<option value="60">1 minute</option>
+			<option value="custom">Autre temps</option>
+		</select>
+		<button id="start" onclick="">Start</button>
+	</div>
 
 
 </body>
