--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
 	afficher la liste des joueur
 	-->
 	<div class="menu">
-		<h1>Joueur : </h1>
-		<h1>XXXXXXXXXX</h1>
+		<h1 style="padding-bottom: 3%;">Liste des joueurs : </h1>
 		<ul id="listeDesJoueur">
 			
 
@@ -34,14 +33,14 @@
 	<!--
 	afficher la parti selectionner
 	-->
-	<div class="menu">
+	<div class="menu" style="visibility: hidden;">
 		<h1>Parti : </h1>
 		<h1>XXXXXXXXXX</h1>
 	</div>
 	<!--
 	afficher la couleur
 	-->
-	<div class="menu">
+	<div class="menu" style="visibility: hidden;">
 		<h1>Couleur : </h1>
 		<h1>XXXXXXXXXX</h1>
 	</div>
