--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
 	<!--
 	afficher la parti selectionner
 	-->
-	<div class="menu" style="visibility: hidden;">
+	<div class="menu" id="parti" style="visibility: hidden;">
 		<h1>Parti : </h1>
 		<h1>XXXXXXXXXX</h1>
 	</div>
 	<!--
 	afficher la couleur
 	-->
-	<div class="menu" style="visibility: hidden;">
+	<div class="menu" id="couleur" style="visibility: hidden;">
 		<h1>Couleur : </h1>
 		<h1>XXXXXXXXXX</h1>
 	</div>
@@ -57,7 +57,7 @@
 			<option value="60">1 minute</option>
 			<option value="custom" id="custom">Autre temps</option>
 		</select>
-		<button id="start" onclick="">Start</button>
+		<button id="start" onclick="startgame()">Start</button>
 	</div>
 
 
