--- a/index.html
+++ b/index.html
@@ -35,14 +35,13 @@
 	-->
 	<div class="menu" id="parti" style="visibility: hidden;">
 		<h1>Parti : </h1>
-		<h1>XXXXXXXXXX</h1>
+		<h1 id="afficherParti"></h1>
 	</div>
 	<!--
 	afficher la couleur
 	-->
 	<div class="menu" id="couleur" style="visibility: hidden;">
 		<h1>Couleur : </h1>
-		<h1>XXXXXXXXXX</h1>
 	</div>
 
 	<div class="menu" id="menu">
