--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 	<script src="index.js"></script>
 	<link rel="stylesheet" href="style.css">
-
+	<meta meta name="viewport" content="user-scalable=no" />
 </head>
 <body>
 
