--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 	<script src="index.js"></script>
 	<link rel="stylesheet" href="style.css">
-	<meta meta name="viewport" content="user-scalable=no" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
 </head>
 <body>
 
